[package]
name = "sdi"
version = "0.1.1"
edition = "2021"
description = "Rust statically resolved dependency injection lib"
homepage = "https://github.com/Thaumy/sdi"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
lazy_static = "1.4.0"
